--- a/index.html
+++ b/index.html
@@ -4,8 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
 </head>
 <body>
+    <div class="buttons">
+        <button id="rock">rock</button>
+        <button id="paper">paper</button>
+        <button id="scissors">scissors</button>
+    </div>
+    <div id="results">
+        
+
+    </div>
+    <div id="msg">
+        
+    </div>
+
+
+
+
+
+
+
     <script src="rps.js"></script>
+
 </body>
 </html>
